fix: missing arrow on mobile devices

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -300,7 +300,10 @@ canvas {
 }
 
 #go-to-gallery {
-    padding-top: 1em;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 input[type="text"],
